# can_protocol_model

./: CMakeLists.txt  README.md
can_protocol_model/: CMakeLists.txt
can_protocol_model/docs/: can_controller_test_plan.xlsx
can_protocol_model/src/modules/: can_bus.h  can_core.h  can_types.h  config_registers.h  i_protocol_config.h  i_tx_message_source.h  message_ram.h  tx_handler.h
can_protocol_model/test/: tb_can_core.cpp  tb_config_regs.cpp  tb_message_ram.cpp  tb_tx_flow.cpp  tb_tx_handler.cpp
